# template_prose_project

./: .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  manuscript__00_abstract.html  manuscript__01_introduction.html  manuscript__06_reproducibility.html  pyproject.toml
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  forking_guide.md  output_conventions.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  02_methodology.md  03_results.md  04_conclusion.md  05_pipeline_internals.md  06_reproducibility.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  preamble.md  references.bib
output/: checks.json  evidence_summary.json  manuscript_report.json  review_report.md  run_summary.json
output/.checkpoints/: pipeline_checkpoint.json
output/web/: index.html  (+9 more)
scripts/: 00_preflight.py  AGENTS.md  CONVENTIONS.md  README.md  run_prose_pipeline.py  y_generate_prose_figures.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  STYLE.md  __init__.py  config.py  figures.py  manuscript_variables.py  prose_facade.py  report.py
tests/: AGENTS.md  PATTERNS.md  README.md  conftest.py  pipeline_helpers.py  test_config.py  test_figures.py  test_manuscript_variables.py  test_pipeline.py  test_pipeline_integration.py  test_prose_facade.py  test_report.py  test_scripts.py
(+93 files in other folders)
