# template_prose_project — exemplar prose-focused research project
# Inherits workspace settings from the root pyproject.toml.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_prose_project"
version = "0.1.0"
description = "Configurable prose-analysis pipeline (readability + structure + quality + reference checking) built on infrastructure/prose and infrastructure/reference."
authors = [{name = "Research Template Author", email = "author@research-template.org"}]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
# Inherits workspace settings from root pyproject.toml
